--- a/src/app/components/search/map/map.component.css
+++ b/src/app/components/search/map/map.component.css
@@ -58,7 +58,18 @@
   margin-left:10px;
   margin-top:10px;
   z-index: 2000;
+}
 
+.found-listings {
+  position:absolute;
+  margin-left:140px;
+  margin-top:15px;
+  font-size: 13px;
+  z-index: 2000;
+  color: white;
+  border-radius: 8px;
+  padding: 5px;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .listing-details {
